# oar

./: .envrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG  CONTRIBUTING.md  COPYRIGHT  CPUSET  FAQ  FAQ-ADMIN  FAQ-USER  GUIDELINES  INSTALL  LICENSE  Makefile  PACKAGING  QUICKSTART-ADMIN  QUICKSTART-USER  README  README.Debian  README.sources  RELEASE_HOWTO  TODO  UPGRADING  VERSION.sh  Vagrantfile  oar_2.4.4+dev3.0a423cf.orig.tar.gz.delta  oar_2.4.4+dev3.0a423cf.orig.tar.gz.id  oar_2.4.5.orig.tar.gz.delta  oar_2.4.5.orig.tar.gz.id  oar_2.4.6.orig.tar.gz.delta  oar_2.4.6.orig.tar.gz.id  oar_2.4.7.orig.tar.gz.delta  oar_2.4.7.orig.tar.gz.id  oar_2.5.0+dev281.3e2f84f.orig.tar.gz.delta  oar_2.5.0+dev281.3e2f84f.orig.tar.gz.id  oar_2.5.0+dev300.2009cdd.orig.tar.gz.delta  oar_2.5.0+dev300.2009cdd.orig.tar.gz.id  oar_2.5.0+dev340.4648d8c.orig.tar.gz.delta  (+129 more)
API/: INSTALL  TODO  apache2-grid.conf  apache2.conf  api_html_header.pl  api_html_postform.pl  examples.txt  oar_apilib.pm  oarapi.pl  oarapi_example.rb  oarapi_examples.txt  oargridapi.pl  oargridapi.txt  oargridapi_example.rb  oargridapi_examples.txt
API/drmaa-c/pbs-oar-lib/: CMakeLists.txt  README  TODO  generator.c  jgenerator.c  jgenerator.h  jparser.c  jparser.h  oar_exchange.c  oar_exchange.h  oar_pbs.c  oar_pbs.h  oar_pbs_test.c  oar_pbs_test1.c  oar_pbs_test2.c  parser.c  parser2.c  parser2.h  pbs_ifl.h  presult.c  presult.h  test_list  tmp2.json  transmission.c
API/drmaa-rest/test/: CMakeLists.txt  curl-test.c
Accounting/: dbfunctions.inc  userconsumptionpie.php
Almighty/: Almighty
ConfLib/: oar_conflib.pm
DB/: README  big_smp_admission_rules.sql  default_admission_rules.sql  init_pg_server.pl  mysql_default_admission_rules.sql  mysql_structure.sql  mysql_structure_upgrade_2.2.12.sql  mysql_structure_upgrade_2.3.0+svn1369.sql  mysql_structure_upgrade_2.3.1-2.3.3.sql  mysql_structure_upgrade_2.3.2+svn1740.sql  mysql_structure_upgrade_2.3.3-2.4.0.sql  mysql_structure_upgrade_2.4.0.sql  oar_db_init.pl  oar_jobs.sql  oar_mysql.sql  oar_mysql_db_init.pl  oar_pg_db_filling.pl  oar_pg_db_init.pl  oar_postgres.sql  oar_psql_db_init.pl  pg_default_admission_rules.sql  pg_structure.sql  pg_structure_upgrade_2.2.12.sql  pg_structure_upgrade_2.3.1-2.3.3.sql  pg_structure_upgrade_2.3.2+svn1740.sql  pg_structure_upgrade_2.3.3-2.4.0.sql  pg_structure_upgrade_2.4.0.sql
DesktopComputing/: oar-agent.pl  oar-cgi  oar-cgi.pl  oarcache.pl  oarfetch.sh  oarres.pl
DrawGantt/: DrawGantt.conf  DrawOARGantt.pl  drawgantt.cgi  drawgantt.conf
Energy/: oar_Energy.pm
FaultTolerance/: HAinstal  HAinstal-4nodes.backup  HAinstal-4nodes~  HAinstal-Centos  HAinstal-Centos.sh  HAinstal-Debian.sh  HAinstal.backup  HAinstal~  cib.xml~  mysql-bench~  script-bench-mysql.sh  test  test~
Hulot/: oar_Hulot.pm
Iolib/: oar_iolib.pm
Judas/: oar_Judas.pm
Leon/: Leon  oarkill
Libs/: oar_conflib.pm  oar_iolib.pm  oarnodes_lib.pm  oarstat_lib.pm  oarsub_lib.pm
Makefiles/: api.mk  common-libs.mk  common.mk  database.mk  desktop-computing-agent.mk  desktop-computing-cgi.mk  doc.mk  draw-gantt.mk  drawgantt-svg.mk  drawgantt.mk  gridapi.mk  gridlibs.mk  kamelot-mysql.mk  kamelot-pg.mk  kamelot-postgresql.mk  kamelot.mk  keyring.mk  libs.mk  man.mk  monika.mk  node.mk  poar.mk  scheduler-ocaml.mk  server.mk  setup.mk  tools.mk  user.mk  www-conf.mk
Misc/: db_converter.rb  db_converter_hetero.rb
Modules/: Almighty  Leon  NodeChangeState  bipbip  db_connection_creator.pm  finaud  fping_notes.txt  libdb.pm  libdb_Pg.pm  libdb_mysql.pm  oar_Judas.pm  oar_conflib.pm  oarexec  ping_checker.pm  runner  sarko
NodeChangeState/: NodeChangeState
Oaradmin/: oar_modules.rb  oaradmin.rb  oaradmin_modules.rb
Oargrid/: INSTALL  Makefile  configurator_wrapper.sh  oargrid_lib.pm  oargrid_sudowrapper.sh  oargridgantt.conf  oargridstat  oargridsub
Qfunctions/: oaraccounting  oardel  oarhold  oarmonitor  oarnodes  oarnodesetting  oarnotify  oarprint  oarproperty  oarremovenode  oarremoveresource  oarresume  oarstat  oarsub
Runner/: bipbip  note_sur_fping.txt  oarexec  oarexecuser.sh  ping_checker.pm  runner
SOURCES/: Makefile.install  apache.conf  oar-node.cron.d  oar-node.init.d  oar-node.sysconfig  oar-server.cron.d  oar-server.init.d
SPECS/: oar.spec
Sarko/: finaud  sarko
Scheduler/: Gant.pm  Gantt.pm  README  oar_meta_sched  oar_sched_fifo  oar_sched_fifo_queue  oar_sched_fifo_queue_killer  oar_sched_gant  oar_sched_gant_besteffort_deploy_aware  oar_sched_gant_compute_mode_aware  oar_sched_gant_g5k  oar_sched_gantt  oar_sched_gantt_with_timesharing  oar_sched_gantt_with_timesharing_and_fairsharing  oar_scheduler.pm  test_gant.pl
Scripts/: README  epilogue  lock_user.sh  oar_diffuse_script  oar_epilogue  oar_epilogue_local  oar_prologue  oar_prologue_local  oar_server_proepilogue.pl  oar_serveur_proepilogue.pl  prologue
Tests/: test_gantt_overlap.pl
Tools/: README.update  configurator_wrapper.sh  cpuset_manager.pl  cpuset_manager_PAM.pl  cpuset_manager_PAM_allow_classic_ssh.pl  cpuset_manager_PAM_backward_compatible.pl  cpuset_manager_SGI_Altix_350_SLES9.pl  cpuset_manager_g5k.pl  oar.conf  (+37 more)
api/drmaa-c/pbs-oar-lib/oar_drmaa/: Makefile  Makefile.am  Makefile.in  README.rst  drmaa.c  job.c  job.h  oar.c  oar.h  oar_attrib.gperf  oar_attrib.h  oar_error.h  session.c  session.h  submit.c  submit.h  test-json-glib.c  test_drmaa.c  test_oar_restapi.c  util.c  util.h
sources/extra/oar-drmaa/oar_drmaa/: Makefile  Makefile.am  Makefile.in  README.rst  drmaa.c  job.c  oar.c  oar.h  oar_attrib.gperf  oar_attrib.h  oar_drmaa.conf.example  submit.c  submit.h  util.c
sources/extra/oar_drmaa/drmaa_utils/: Makefile.am  Makefile.in  attrib.c  attrib.h  common.h  compat.c  compat.h  conf.c  conf.h  conf_impl.h  conf_tab.c  conf_tab.h  conf_tab.y  datetime.c  datetime.h  datetime_impl.h  datetime_tab.c  datetime_tab.h  datetime_tab.y  drmaa.h  drmaa_attrib.c  drmaa_attrib.gperf  drmaa_base.c  drmaa_base.h  drmaa_impl.h  errctx.h  error.c  error.h  lookup3.c  lookup3.h  thread.c  thread.h  util.c  util.h  xmalloc.c  xmalloc.h
(+2412 files in other folders)
